hide scrollbar and fix header

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
